--- a/app/views/spree/address/_daum_address_api.html.erb
+++ b/app/views/spree/address/_daum_address_api.html.erb
@@ -7,7 +7,7 @@
     		<%= form.phone_field :zipcode, :placeholder => "우편번호", :class => "required", :data => { "msg-required" => "우편번호 입력 부탁 드립니다." }, readOnly: true %>
     	</div><!-- zip code 01 -->
     	<div class="zipcode-02">
-    		<a href="#" id="showDaumPostCode">우편번호</button>
+    		<a href="#" id="showDaumPostCode">우편번호찾기</button>
     	</div><!-- zip code 02 -->
     </div>
     <%= form.text_field :address1, :placeholder => "배송지주소1 (도로명주소)", :class => "required", :data => { "msg-required" => "주소 입력 부탁 드립니다." }, readOnly: true %>
