--- a/app/views/spree/address/_daum_address_api.html.erb
+++ b/app/views/spree/address/_daum_address_api.html.erb
@@ -1,17 +1,17 @@
   <script src="https://spi.maps.daum.net/imap/map_js_init/postcode.v2.js"></script>
 
   <fieldset>
-    <%= form.text_field :firstname, :placeholder => "이름", :class => "required", :data => { "msg-required" => "이름 입력 부탁 드립니다." } %>
-    <%= form.phone_field :phone, :placeholder => "휴대폰 번호", :class => "required", :data => { "msg-required" => "전화번호 입력 부탁 드립니다." } %>
+    <%= form.text_field :firstname, :placeholder => "한글 이름", :class => "required", :data => { "msg-required" => "이름을 입력해주세요." } %>
+    <%= form.phone_field :phone, :placeholder => "휴대폰 번호", :class => "required", :data => { "msg-required" => "휴대폰 번호를 입력해주세요." } %>
     <div class="zip-code">
         <div class="zipcode-01">
-            <%= form.phone_field :zipcode, :placeholder => "우편번호", :class => "required", :data => { "msg-required" => "우편번호 입력 부탁 드립니다." }, readOnly: true %>
+            <%= form.phone_field :zipcode, :placeholder => "한국 우편번호", :class => "required", :data => { "msg-required" => "우편번호를 입력해주세요." }, readOnly: true %>
         </div><!-- zip code 01 -->
         <div class="zipcode-02">
             <button class="address-btn">우편번호찾기</button>
         </div><!-- zip code 02 -->
     </div>
-    <%= form.text_field :address1, :placeholder => "주소를 입력하세요", :class => "required", :data => { "msg-required" => "주소 입력 부탁 드립니다." }, readOnly: true %>
-    <%= form.text_field :address2, :placeholder => "상세주소를 입력하세요", :class => "required", :data => { "msg-required" => "주소 입력 부탁 드립니다." } %>
+    <%= form.text_field :address1, :placeholder => "주소를 입력하세요(한글로)", :class => "required", :data => { "msg-required" => "주소를 입력해주세요." }, readOnly: true %>
+    <%= form.text_field :address2, :placeholder => "상세 주소를 입력하세요(이것도 한글로)", :class => "required", :data => { "msg-required" => "상세 주소를 입력해주세요." } %>
     <%= form.text_field :other_comment, :placeholder => "그 외 남기실 말 또는 배송지 메모" %>
   </fieldset>
